--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500 mx-auto border"
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
-        <p id="text">С днём рождения Меня!</p>
+        <p id="text">С днюхой меня!</p>
         <!-- <p id="text">МАМОЧКА!!</p> -->
       </div>
     </div>
@@ -26,7 +26,7 @@
     <div
       class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500"
       style="margin-bottom: 15px;">
-      <img class="h-[100%] rounded-[14px]" src="./images//do1.jpg">
+      <img class="h-[100%] rounded-[14px]" src="./images/do1.jpg">
       <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
     </div>
 
