--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500 mx-auto border"
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
-        <p id="text">С днюхой меня!</p>
-        <!-- <p id="text">МАМОЧКА!!</p> -->
+        <p id="text">С днём рождения!</p>
+        <p id="text">Ана</p>
       </div>
     </div>
 
@@ -38,7 +38,7 @@
       <div
         class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
         <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Меня</a>
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Ани</a>
         <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
       </div>
     </div>
