--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body style="padding-top: 20px; background-image: url(./images/fon1.gif);">
+<body style="padding-top: 20px; background-image: url(./images/fon1.jpg);">
   <div style="
     width: fit-content;
     top: 10px;
@@ -39,7 +39,7 @@
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
           <!-- <img style="max-width: 100px;" src="./images/samalk/rock.gif"> -->
         </marquee>
-        <p class="title" style="color: #115f12;">песни про меня</p>
+        <p class="title" style="color: #115f12;">песни для Ани</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
