--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500 mx-auto border"
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
-        <p id="text">С днюхой меня!</p>
-        <!-- <p id="text">МАМОЧКА!!</p> -->
+        <p id="text">С днём рождения </p>
+        <p id="text">МЕНЯ!!</p>
       </div>
     </div>
 
