--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -8,7 +8,7 @@
   <!-- <link rel="stylesheet" href="./css/index.css"> -->
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/swiper.css">
-  <!-- <link rel="stylesheet" href="./css/antoon.css"> -->
+  <link rel="stylesheet" href="./css/antoon.css">
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="icon" href="./images/muz.png">
   <title>музыка</title>
@@ -71,6 +71,11 @@
       </div>
     </div>
   </div>
+  <hr>
+  <div class="logo">
+    <img class="foto-logo" src="./images/logo-1.png" alt="">
+  </div>
+
   <script src="./js/swiper-bundle.min.js"></script>
   <script src="./script.js"></script>
 
