--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/muzik.css">
-    <link rel="stylesheet" href="./css/antoon.css">
-    <link rel="icon" href="./images/muz.png">
-    <title>С Добрым утром!!!</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/muzik.css">
+  <link rel="stylesheet" href="./css/antoon.css">
+  <link rel="icon" href="./images/muz.png">
+  <title>С Добрым утром!!!</title>
+</head>
 
-  <body style="background-image: url('./images/fon1.jpg');">
-    <div class="px-3">
-      <div class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 mx-auto border" style="margin: 10px auto 15px auto;">
-        <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] text-green-800 font-Spectral">
-          <p id="text">С Добрым утром!</p>
-          <!-- <p id="text">МАМОЧКА!!</p> -->
-        </div>
-      </div>
-
-      <div class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600" style="margin-bottom: 15px;">
-        <img class="h-[100%] rounded-[14px]" src="./images//do1.jpg">
-        <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
-      </div>
-
-      <!-- <div id="card2" style="margin-bottom: 15px;"> <div id="bdgroove2" class="h-auto rounded-2xl max-w-[500px] bg-gradient-to-r from-green-500 via-green-200 to-green-500 backdrop-blur-xl mx-auto py-8 px-[40px] leading-10"> <p id="text" class=" text-green-900 font-spectral"> Ты на год прекрасней стала,<br> И сильнее, и мудрей.<br> Впереди еще немало<br> У тебя чудесных дней.<br> <br> Пусть тебе сияет счастье <br> Солнцем в небе голубом. <br> Пусть любовью и уютом <br> Будет твой наполнен дом. <br><br> Пусть в твоей найдется жизни <br> Место радостной мечте. <br> В день рождения желаю<br> Быть всегда на высоте! <br> </p> </div> </div> -->
-
-      <div id="bdgroove" class="border rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 max-w-[500px] mx-auto" style="margin-bottom: 15px;">
-        <div class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
-          <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-          <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">музыка для<br>хорошего настроения</a>
-          <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
-        </div>
+<body style="background-image: url('./images/fon1.jpg');">
+  <div class="px-3">
+    <div class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 mx-auto border"
+      style="margin: 10px auto 15px auto;">
+      <div
+        class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] text-green-800 font-Spectral">
+        <p id="text">С Добрым утром!</p>
+        <!-- <p id="text">МАМОЧКА!!</p> -->
       </div>
     </div>
-  </body>
+
+    <div
+      class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600"
+      style="margin-bottom: 15px;">
+      <img class="h-[100%] rounded-[14px]" src="./images//do1.jpg">
+      <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
+    </div>
+
+    <!-- <div id="card2" style="margin-bottom: 15px;"> <div id="bdgroove2" class="h-auto rounded-2xl max-w-[500px] bg-gradient-to-r from-green-500 via-green-200 to-green-500 backdrop-blur-xl mx-auto py-8 px-[40px] leading-10"> <p id="text" class=" text-green-900 font-spectral"> Ты на год прекрасней стала,<br> И сильнее, и мудрей.<br> Впереди еще немало<br> У тебя чудесных дней.<br> <br> Пусть тебе сияет счастье <br> Солнцем в небе голубом. <br> Пусть любовью и уютом <br> Будет твой наполнен дом. <br><br> Пусть в твоей найдется жизни <br> Место радостной мечте. <br> В день рождения желаю<br> Быть всегда на высоте! <br> </p> </div> </div> -->
+
+    <div id="bdgroove"
+      class="border rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 max-w-[500px] mx-auto"
+      style="margin-bottom: 15px;">
+      <div
+        class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
+        <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">музыка для<br>хорошего настроения</a>
+        <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="logo">
+    <img class="foto-logo" src="./images/logo-1.png" alt="">
+  </div>
+</body>
 
 </html>
