--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -53,16 +53,16 @@
               <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="image-slider_image">
               <video src="./media/video/den3.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
-          </div>
-          <div class="swiper-slide">
+          </div> -->
+          <!-- <div class="swiper-slide">
             <div class="image-slider_image">
               <video src="./media/video/den4.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
-          </div>
+          </div> -->
           <!-- И так далее -->
         </div>
         <!-- ** Далее идут элементы управления -->
