--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="stylesheet" href="./css/antoon.css">
   <link rel="icon" href="./images/muz.png">
-  <title>с днём рождения меня</title>
+  <title>с днём рождения Анна</title>
 </head>
 
 <body style="background-image: url('./images/fon1.jpg');">
@@ -19,7 +19,7 @@
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
         <p id="text">С днём рождения!</p>
-        <p id="text">Ана</p>
+        <p id="text">Анна</p>
       </div>
     </div>
 
@@ -38,7 +38,7 @@
       <div
         class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
         <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Ани</a>
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Анны</a>
         <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
       </div>
     </div>
