--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,9 @@
       </div>
     </div>
   </div>
+  <div class="logo">
+    <img class="foto-logo" src="./images/logo-1.png" alt="">
+  </div>
 </body>
 
 </html>
