--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -72,6 +72,9 @@
         <!-- scroll if needed -->
         <!-- <div class="swiper-scrollbar"></div> -->
       </div>
+      <div class="logo">
+        <img class="foto-logo" src="./images/logo-1.png" alt="">
+      </div>
     </div>
   </div>
   <script src="./js/swiper-bundle.min.js"></script>
