--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -9,7 +9,7 @@
   <!-- <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"> -->
   <link rel="stylesheet" href="./css/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/swiper.css">
-  <!-- <link rel="stylesheet" href="./css/antoon.css"> -->
+  <link rel="stylesheet" href="./css/antoon.css">
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="icon" href="./images/muz.png">
   <title>музыка</title>
