--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body style="padding-top: 20px; background-image: url(./images/fon1.gif);">
+<body style="padding-top: 20px; background-image: url(./images/fon1.jpg);">
   <div style="
     width: fit-content;
     top: 10px;
@@ -37,7 +37,7 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">Песни про меня</p>
+        <p class="title" style="color: #115f12;">Песни с 1 мая!</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
@@ -51,7 +51,7 @@
               <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <div class="image-slider_image">
               <video src="./media/video/den3.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
@@ -60,7 +60,7 @@
             <div class="image-slider_image">
               <video src="./media/video/den4.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
-          </div>
+          </div> -->
           <!-- И так далее -->
         </div>
         <!-- ** Далее идут элементы управления -->
