--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <title>С Добрым утром!!!</title>
 </head>
 
-<body style="background-image: url('./images/fon1.jpg');">
+<body style="background-image: url('./images/fon2.gif');">
   <div class="px-3">
     <div class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 mx-auto border"
       style="margin: 10px auto 15px auto;">
