--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -37,7 +37,7 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">песни для Анны</p>
+        <p class="title" style="color: #115f12;">песни для Александра</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
