--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -16,14 +16,14 @@
 
 </head>
 
-<body style="padding-top: 20px; background-image: url(./images/fon1.jpg);">
+<body style="padding-top: 20px; background-image: url(./images/fon-c.jpg);">
   <div style="
     width: fit-content;
     top: 10px;
     margin: 10px auto;
-    /* backdrop-filter: blur(10px); */
+    backdrop-filter: blur(10px);
     padding: 0 10px;">
-    <a style="color: #115f12;" href="./index.html">🎉 на главную...🎉</a>
+    <a style="color: #1c6d9c;" href="./index.html">🎉 на главную...🎉</a>
   </div>
 
   <div style="
@@ -37,7 +37,7 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">песни для Александра</p>
+        <p class="title" style="color: #115f12;">песни для Мамочки</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
@@ -48,7 +48,7 @@
           </div>
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/denm2.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <!-- <div class="swiper-slide">
