--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -23,7 +23,7 @@
     margin: 10px auto;
     backdrop-filter: blur(10px);
     padding: 0 10px;">
-    <a style="color: #1c6d9c;" href="./index.html">🎉 на главную...🎉</a>
+    <a style="color: #058007;" href="./index.html">🎉 на главную...🎉</a>
   </div>
 
   <div style="
@@ -37,7 +37,7 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">песни для Мамочки</p>
+        <p class="title" style="color: #058007;">песни для Мамочки</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
