--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -23,7 +23,7 @@
     margin: 10px auto;
     /* backdrop-filter: blur(10px); */
     padding: 0 10px;">
-    <a style="color: #115f12;" href="./index.html">🎉 на главную...🎉</a>
+    <a style="color: #115f12; text-shadow: 2px 0px 0px #fff;" href="./index.html">🎉 на главную...🎉</a>
   </div>
 
   <div style="
@@ -37,18 +37,18 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">песни для Александра</p>
+        <p class="title" style="color: #115f12; text-shadow: 2px 0px 0px #fff;">песни для хорошего дня</p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/den1.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/varena.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/kars.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <!-- <div class="swiper-slide">
