--- a/src/index.html
+++ b/src/index.html
@@ -9,36 +9,35 @@
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="stylesheet" href="./css/antoon.css">
   <link rel="icon" href="./images/muz.png">
-  <title>с днём рождения Александр!!!</title>
+  <title>с днем варенья!!!</title>
 </head>
 
 <body style="background-image: url('./images/fon1.jpg');">
   <div class="px-3">
-    <div
-      class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500 mx-auto border"
+    <div class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-red-500 via-red-200 to-red-500 mx-auto border"
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
-        <p id="text">С днём рождения</p>
-        <p id="text">Александр!!!</p>
+        <p id="text">С днём </p>
+        <p id="text">варенья!!!</p>
       </div>
     </div>
 
     <div
-      class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500"
+      class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-red-500 via-red-200 to-red-500"
       style="margin-bottom: 15px;">
-      <img class="h-[100%] rounded-[14px]" src="./images/do1.jpg">
+      <img class="h-[100%] rounded-[14px]" src="./images/karos.jpg">
       <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
     </div>
 
     <!-- <div id="card2" style="margin-bottom: 15px;"> <div id="bdgroove2" class="h-auto rounded-2xl max-w-[500px] bg-gradient-to-r from-green-500 via-green-200 to-green-500 backdrop-blur-xl mx-auto py-8 px-[40px] leading-10"> <p id="text" class=" text-green-900 font-spectral"> Ты на год прекрасней стала,<br> И сильнее, и мудрей.<br> Впереди еще немало<br> У тебя чудесных дней.<br> <br> Пусть тебе сияет счастье <br> Солнцем в небе голубом. <br> Пусть любовью и уютом <br> Будет твой наполнен дом. <br><br> Пусть в твоей найдется жизни <br> Место радостной мечте. <br> В день рождения желаю<br> Быть всегда на высоте! <br> </p> </div> </div> -->
 
     <div id="bdgroove"
-      class="border rounded-2xl h-auto bg-gradient-to-r from-amber-500 via-amber-200 to-amber-500 max-w-[500px] mx-auto"
+      class="border rounded-2xl h-auto bg-gradient-to-r from-red-500 via-red-200 to-red-500 max-w-[500px] mx-auto"
       style="margin-bottom: 15px;">
       <div
         class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
         <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Александра</a>
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка <br>хорошего дена</a>
         <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
       </div>
     </div>
