--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="stylesheet" href="./css/antoon.css">
   <link rel="icon" href="./images/muz.png">
-  <title>с днём рождения Мамочка!!!</title>
+  <title>с днём рождения Кристина!!!</title>
 </head>
 
 <body style="background-image: url('./images/fon-c.jpg');">
@@ -18,14 +18,14 @@
       style="margin: 10px auto 15px auto;">
       <div class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] font-Spectral">
         <p id="text">С днём рождения</p>
-        <p id="text">мамочка!!!</p>
+        <p id="text">Кристина!!!</p>
       </div>
     </div>
 
     <div
       class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-red-500 via-red-200 to-red-500"
       style="margin-bottom: 15px;">
-      <img class="h-[100%] rounded-[14px]" src="./images/mama.gif">
+      <img class="h-[100%] rounded-[14px]" src="./images/krs.gif">
       <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
     </div>
 
@@ -37,7 +37,7 @@
       <div
         class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
         <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Мамочки</a>
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">Музыка для<br>Кристины</a>
         <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
       </div>
     </div>
