--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -48,7 +48,7 @@
           </div>
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/denm2.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <!-- <div class="swiper-slide">
