--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="stylesheet" href="./css/antoon.css">
   <link rel="icon" href="./images/muz.png">
-  <title>С Добрым утром!!!</title>
+  <title>!!!</title>
 </head>
 
 <body style="background-image: url('./images/fon2.gif');">
@@ -18,7 +18,7 @@
       style="margin: 10px auto 15px auto;">
       <div
         class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] text-green-800 font-Spectral">
-        <p id="text">С Добрым утром!</p>
+        <p id="text">!</p>
         <!-- <p id="text">МАМОЧКА!!</p> -->
       </div>
     </div>
