--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -36,7 +36,7 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;">музыка для хорошего настроения</p>
+        <p class="title" style="color: #115f12;"></p>
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
