--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body style="padding-top: 20px; background-image: url(./images/fon2.gif);">
+<body style="padding-top: 20px; background-image: url(./images/fon.gif);">
   <div style="
     width: fit-content;
     top: 10px;
@@ -36,18 +36,18 @@
         <marquee direction="right" behavior="alternate">
           <img style="max-width: 200px;" src="./images/samalk/rock.gif">
         </marquee>
-        <p class="title" style="color: #115f12;"></p>
+        <!-- <p class="title" style="color: #115f12;"></p> -->
         <!-- Обязательная оболочка -->
         <div class="swiper-wrapper">
           <!-- Слайды dct -->
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/d2.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/v1.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/d.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/v2.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <!-- <div class="swiper-slide"> <div class="image-slider_image"> <video src="./media/video/pa2.mp4" controls="controls" width="100%" height="auto" poster=""></video> </div> </div> -->
