--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,16 @@
   <link rel="stylesheet" href="./css/muzik.css">
   <link rel="stylesheet" href="./css/antoon.css">
   <link rel="icon" href="./images/muz.png">
-  <title>!!!</title>
+  <title>Я тебя люблю!!!</title>
 </head>
 
-<body style="background-image: url('./images/fon2.gif');">
+<body style="background-image: url('./images/fon.gif');">
   <div class="px-3">
     <div class="max-w-[500px] rounded-2xl h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600 mx-auto border"
       style="margin: 10px auto 15px auto;">
       <div
         class="font-size text-[40px] pb-[14px] mx-1 mt-[10px] mb-[10px] text-center leading-[40px] text-green-800 font-Spectral">
-        <p id="text">!</p>
+        <p id="text">Я тебя люблю!!!</p>
         <!-- <p id="text">МАМОЧКА!!</p> -->
       </div>
     </div>
@@ -26,7 +26,7 @@
     <div
       class="mx-auto border rounded-2xl max-w-[500px]  text-center h-auto bg-gradient-to-r from-cyan-700 via-cyan-200 to-cyan-600"
       style="margin-bottom: 15px;">
-      <img class="h-[100%] rounded-[14px]" src="./images//do1.jpg">
+      <img class="h-[100%] rounded-[14px]" src="./images/love.gif">
       <!-- <a class="text-[36px] text-green-800 font-Spectral gradient" href="./swiper.html">Галерея...</a> -->
     </div>
 
@@ -38,12 +38,12 @@
       <div
         class="text-[28px] text-center mt-[10px] mb-[10px] leading-[60px] text-green-800 font-Spectral flex justify-center">
         <img style="width: 50px; height: 50px;" src="./images/samalk/gitara.gif" alt="">
-        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">музыка для<br>хорошего настроения</a>
+        <a class="gradient mx-3 leading-[39px]" href="./swiper-media.html">музыка для<br>любви</a>
         <img style="width: 50px; height: 50px;" src="./images/samalk/tanec.gif" alt="">
       </div>
     </div>
   </div>
-  <hr>
+
   <div class="logo">
     <img class="foto-logo" src="./images/logo-1.png" alt="">
   </div>
