--- a/src/swiper-media.html
+++ b/src/swiper-media.html
@@ -43,12 +43,12 @@
           <!-- Слайды dct -->
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/den1.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/v3.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="image-slider_image">
-              <video src="./media/video/den2.mp4" controls="controls" width="100%" height="auto"></video>
+              <video src="./media/video/v4.mp4" controls="controls" width="100%" height="auto"></video>
             </div>
           </div>
           <!-- <div class="swiper-slide">
